--- a/src/app/home/home.page.html
+++ b/src/app/home/home.page.html
@@ -1,7 +1,7 @@
 <ion-header [translucent]="true">
   <ion-toolbar>
     <ion-title>
-      Blank
+      Toy Robot Simulator
     </ion-title>
   </ion-toolbar>
 </ion-header>
@@ -9,12 +9,32 @@
 <ion-content [fullscreen]="true">
   <ion-header collapse="condense">
     <ion-toolbar>
-      <ion-title size="large">Blank</ion-title>
+      <ion-title size="large">Toy Robot Simulator</ion-title>
     </ion-toolbar>
   </ion-header>
 
   <div id="container">
-    <strong>Ready to create an app?</strong>
-    <p>Start with Ionic <a target="_blank" rel="noopener noreferrer" href="https://ionicframework.com/docs/components">UI Components</a></p>
+    <!-- <app-board-view></app-board-view> -->
+    <div class="place-table">
+      <app-board
+        [command]="command"
+        (commandExecuted)="onCommandReceived($event)"
+      ></app-board>
+    </div>
+    <div class="ion-padding-top">
+      <app-command (commandReceived)="onCommandReceived($event)"></app-command>
+    </div>
+
+    <div id="output-container">
+      <div>
+        <output>
+          {{uilog}}
+        </output>
+      </div>
+    </div>
+
+    <div>
+      <app-manual></app-manual>
+    </div>
   </div>
 </ion-content>
